--- a/scss/_tag.scss
+++ b/scss/_tag.scss
@@ -66,8 +66,8 @@ section {
         content: " ";
         z-index: -2;
 
-        width: 5rem;
-        height: 5rem;
+        width: 6rem;
+        height: 6rem;
         background-color: rgba($second-color, .5);
 
     }
@@ -75,12 +75,13 @@ section {
         position: absolute;
         bottom: 1rem;
         right: 1rem;
-        display: block;
-        content: " ";
+        @include displayFlex();
+        content: "JINGWANG";
+        color: white;
         z-index: -1;
 
-        width: 5rem;
-        height: 5rem;
+        width: 6rem;
+        height: 6rem;
         background-color: rgba($main-color, .5);
 
     }
