--- a/scss/_tag.scss
+++ b/scss/_tag.scss
@@ -5,6 +5,7 @@
 a {
     text-decoration: none;
     color: #333;
+    transition: all 1s;
     &:hover {
         color: $main-color;
     }
@@ -27,17 +28,16 @@ label{
 
 input {
     display: inline-block;
-    appearance:none;
     -webkit-appearance:none;
     border-radius: 0;
 }
 
 input[type=search] {
-    text-transform: uppercase;
-	outline:none;
+    text-transform: uppercase;	
+    outline:none;
     border: none;
-    padding: 1rem;
     border-bottom: 2px solid $second-color;
+    transition: all .5s;
 
     @include fontSize(1);
 
