--- a/scss/_component.scss
+++ b/scss/_component.scss
@@ -42,3 +42,34 @@ i.fas, i.fab {
     box-shadow: 0 0 3px 3px $second-color;
 }
 
+.bg-logo {
+    position: relative;
+
+    &::before {
+        position: absolute;
+        bottom: 2rem;
+        right: 2rem;
+        display: block;
+        content: " ";
+        z-index: -2;
+
+        width: 6rem;
+        height: 6rem;
+        background-color: rgba($second-color, .5);
+
+    }
+    &::after {
+        position: absolute;
+        bottom: 1rem;
+        right: 1rem;
+        @include displayFlex();
+        content: "JINGWANG";
+        color: white;
+        z-index: -1;
+
+        width: 6rem;
+        height: 6rem;
+        background-color: rgba($main-color, .5);
+
+    }
+}
