--- a/scss/index.scss
+++ b/scss/index.scss
@@ -29,11 +29,10 @@ main {
                     @extend %border-bottom;
                 }
                 ul {
-                    padding-left: 1rem;
 
                     li {
                         a {
-                            padding: 1rem 0 ;
+                            padding: 1rem;
                         }
                     }
                 }
