--- a/css/index.css
+++ b/css/index.css
@@ -1,11 +1,14 @@
 a {
   text-decoration: none;
   color: #333;
+  -webkit-transition: all 1s;
   transition: all 1s;
 }
+
 a:hover {
   color: #1080fb;
 }
+
 a:active {
   color: #1080fb;
 }
@@ -30,9 +33,11 @@ input[type=search] {
   outline: none;
   border: none;
   border-bottom: 2px solid black;
-  transition: all 0.5s;
+  -webkit-transition: all .5s;
+  transition: all .5s;
   font-size: 1.5rem;
 }
+
 input[type=search]:focus {
   font-size: 1.5rem;
   background: black;
@@ -70,7 +75,7 @@ p {
   line-height: 1.3;
   color: #333;
   display: block;
-  padding: 0.5rem 0;
+  padding: .5rem 0;
   text-transform: uppercase;
 }
 
@@ -85,12 +90,14 @@ main article div#sections-wrapper section h2 {
 }
 
 .box-shadow {
-  box-shadow: 0 0 3px 3px black;
+  -webkit-box-shadow: 0 0 3px 3px black;
+          box-shadow: 0 0 3px 3px black;
 }
 
 .bg-logo {
   position: relative;
 }
+
 .bg-logo::before {
   position: absolute;
   bottom: 2rem;
@@ -102,14 +109,24 @@ main article div#sections-wrapper section h2 {
   height: 6rem;
   background-color: rgba(0, 0, 0, 0.5);
 }
+
 .bg-logo::after {
   position: absolute;
   bottom: 1rem;
   right: 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-flow: row wrap;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   content: "JINGWANG";
   color: white;
   z-index: -1;
@@ -118,26 +135,49 @@ main article div#sections-wrapper section h2 {
   background-color: rgba(16, 128, 251, 0.5);
 }
 
-@keyframes scale {
+@-webkit-keyframes scale {
   0% {
-    transform: scale(0.9);
+    -webkit-transform: scale(0.9);
+            transform: scale(0.9);
     opacity: 0;
   }
   50% {
-    transform: scale(1.01);
+    -webkit-transform: scale(1.01);
+            transform: scale(1.01);
     opacity: 0.5;
   }
   100% {
-    transform: scale(1);
+    -webkit-transform: scale(1);
+            transform: scale(1);
     opacity: 1;
   }
 }
+
+@keyframes scale {
+  0% {
+    -webkit-transform: scale(0.9);
+            transform: scale(0.9);
+    opacity: 0;
+  }
+  50% {
+    -webkit-transform: scale(1.01);
+            transform: scale(1.01);
+    opacity: 0.5;
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    opacity: 1;
+  }
+}
+
 /*    Ready 
---------------------------------------------------*/
+    --------------------------------------------------*/
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 html {
@@ -151,76 +191,124 @@ html, body {
 }
 
 /*    Layout 
---------------------------------------------------*/
+    --------------------------------------------------*/
 body {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-flow: column nowrap;
-  align-items: normal;
-  justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column nowrap;
+          flex-flow: column nowrap;
+  -webkit-box-align: normal;
+      -ms-flex-align: normal;
+          align-items: normal;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
+
 body > header div#logo {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  display: flex;
-  flex-flow: row wrap;
-  align-items: center;
-  justify-content: flex-start;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
 }
+
 body > header div#logo h1 a {
   display: block;
 }
+
 body > header div#logo div#icon-menu {
-  flex: auto;
+  -webkit-box-flex: 1;
+      -ms-flex: auto;
+          flex: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-flow: row nowrap;
-  align-items: center;
-  justify-content: flex-end;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row nowrap;
+          flex-flow: row nowrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
 }
+
 body > header div#nav-wrapper nav#nav-menu {
   display: none;
 }
+
 body > header div#nav-wrapper nav#nav-menu.active {
   display: block;
 }
+
 body > header div#nav-wrapper nav#nav-menu a {
   display: block;
 }
+
 body > header div#nav-wrapper form#nav-search {
   display: none;
 }
+
 body > header div#nav-wrapper form#nav-search.active {
   display: block;
 }
-body main {
-  flex: auto;
+
+body .content-container {
+  -webkit-box-flex: 1;
+      -ms-flex: auto;
+          flex: auto;
 }
 
 /*    Typography 
---------------------------------------------------*/
+    --------------------------------------------------*/
 body > header, body main {
   margin-bottom: 1rem;
 }
+
 body > header div#logo h1 a {
   background: #1080fb;
   padding: 1rem;
   line-height: 1;
   color: white;
-  box-shadow: -1rem -1rem black;
+  -webkit-box-shadow: -1rem -1rem black;
+          box-shadow: -1rem -1rem black;
 }
+
 body > header div#logo div#icon-menu {
   margin-left: 1rem;
 }
+
 body > header div#nav-wrapper > * {
-  animation: scale 0.7s ease-in-out;
+  -webkit-animation: scale 0.7s ease-in-out;
+          animation: scale 0.7s ease-in-out;
 }
+
 body > header div#nav-wrapper nav#nav-menu ul li:last-of-type a:hover {
   border: none;
 }
+
 body > header div#nav-wrapper nav#nav-menu ul li {
   padding: 0 1rem;
 }
+
 body > header div#nav-wrapper form#nav-search {
   padding: 1rem;
 }
+
 body > header div#nav-wrapper form#nav-search input {
   width: 100%;
   padding: 1rem;
@@ -228,9 +316,9 @@ body > header div#nav-wrapper form#nav-search input {
 
 @media (min-width: 31.25em) {
   /*    Layout 500 
-  --------------------------------------------------*/
+    --------------------------------------------------*/
   /*    Typography 500 
-  --------------------------------------------------*/
+    --------------------------------------------------*/
   body > header div#logo h1 {
     padding: 1rem 2rem;
   }
@@ -238,9 +326,10 @@ body > header div#nav-wrapper form#nav-search input {
     margin-left: 1rem;
   }
 }
+
 @media (min-width: 43.75em) {
   /*    Layout 700 
-  --------------------------------------------------*/
+    --------------------------------------------------*/
   body > header div#logo h1 a {
     display: block;
   }
@@ -248,21 +337,43 @@ body > header div#nav-wrapper form#nav-search input {
     display: none;
   }
   body > header div#nav-wrapper {
-    flex: auto;
+    -webkit-box-flex: 1;
+        -ms-flex: auto;
+            flex: auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-flow: row wrap;
-    align-items: center;
-    justify-content: flex-start;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
   }
   body > header div#nav-wrapper nav#nav-menu {
-    flex: auto;
+    -webkit-box-flex: 1;
+        -ms-flex: auto;
+            flex: auto;
     display: block;
   }
   body > header div#nav-wrapper nav#nav-menu ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-flow: row wrap;
-    align-items: center;
-    justify-content: flex-start;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
   }
   body > header div#nav-wrapper form#nav-search {
     display: block;
@@ -270,9 +381,8 @@ body > header div#nav-wrapper form#nav-search input {
   body > header div#nav-wrapper form#nav-search.active {
     display: block;
   }
-
   /*    Typography 700 
-  --------------------------------------------------*/
+    --------------------------------------------------*/
   body > header div#nav-wrapper nav#nav-menu ul li {
     padding: 0;
   }
@@ -280,31 +390,63 @@ body > header div#nav-wrapper form#nav-search input {
     padding: 1rem;
   }
 }
+
 @media (min-width: 56.25em) {
   /*    Layout 900 
-  --------------------------------------------------*/
+    --------------------------------------------------*/
   body > header {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-flow: row wrap;
-    align-items: center;
-    justify-content: flex-start;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
   }
   body > header div#nav-wrapper {
-    flex: auto;
+    -webkit-box-flex: 1;
+        -ms-flex: auto;
+            flex: auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-flow: row wrap;
-    align-items: center;
-    justify-content: flex-start;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
   }
   body > header div#nav-wrapper nav#nav-menu {
-    flex: auto;
+    -webkit-box-flex: 1;
+        -ms-flex: auto;
+            flex: auto;
     display: block;
   }
   body > header div#nav-wrapper nav#nav-menu ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-flow: row wrap;
-    align-items: center;
-    justify-content: flex-start;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
   }
   body > header div#nav-wrapper nav#nav-menu ul li a {
     padding: 1rem;
@@ -316,101 +458,160 @@ body > header div#nav-wrapper form#nav-search input {
     display: block;
   }
   body main {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-flow: row nowrap;
-    align-items: normal;
-    justify-content: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row nowrap;
+            flex-flow: row nowrap;
+    -webkit-box-align: normal;
+        -ms-flex-align: normal;
+            align-items: normal;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
-
   /*    Typography 900 
-  --------------------------------------------------*/
+    --------------------------------------------------*/
   body {
     padding: 0 calc(50% - 480px);
   }
 }
+
 @media (min-width: 75em) {
   /*    Layout 900 
-  --------------------------------------------------*/
+    --------------------------------------------------*/
   /*    Typography 900 
-  --------------------------------------------------*/
+    --------------------------------------------------*/
   body {
     padding: 0 calc(50% - 600px);
   }
 }
+
 /*    Layout 
---------------------------------------------------*/
-main aside figure img {
+    --------------------------------------------------*/
+aside figure img {
   max-width: 100px;
 }
 
 /*    typography 
---------------------------------------------------*/
+    --------------------------------------------------*/
 main article > header h1 {
   line-height: 1.1;
 }
+
 main article div#sections-wrapper section {
   margin: 1rem;
 }
+
 main article div#sections-wrapper section ul li a {
   padding: 1rem;
 }
-main aside section {
+
+aside section {
   margin: 1rem;
 }
-main aside section#aside-info figure {
+
+aside section#aside-info figure {
   text-align: center;
   padding: 1rem;
 }
-main aside section#aside-info ul {
+
+aside section#aside-info ul {
   padding: 1rem;
 }
 
 @media (min-width: 31.25em) {
   /*    layout 500 
-  --------------------------------------------------*/
+    --------------------------------------------------*/
   main article div#sections-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-flow: row wrap;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
   main article div#sections-wrapper section {
-    flex: auto;
+    -webkit-box-flex: 1;
+        -ms-flex: auto;
+            flex: auto;
   }
-  main aside section#aside-info {
+  aside section#aside-info {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-flow: row wrap;
-    align-items: center;
-    justify-content: flex-start;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
   }
-
   /*    typography 500 
-  --------------------------------------------------*/
-  main aside section#aside-info {
+    --------------------------------------------------*/
+  aside section#aside-info {
     padding: 2rem;
   }
 }
+
 /*    layout 700 
---------------------------------------------------*/
+    --------------------------------------------------*/
 /*    typography 700 
---------------------------------------------------*/
+    --------------------------------------------------*/
 @media (min-width: 56.25em) {
   /*    layout 900 
-  --------------------------------------------------*/
-  main article {
-    flex: auto;
+    --------------------------------------------------*/
+  .content-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row nowrap;
+            flex-flow: row nowrap;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: start;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
-  main aside section#aside-info {
+  .content-container main {
+    -webkit-box-flex: 1;
+        -ms-flex: auto;
+            flex: auto;
+    margin-right: 1rem;
+  }
+  .content-container main article {
+    -webkit-box-flex: 1;
+        -ms-flex: auto;
+            flex: auto;
+  }
+  .content-container aside section#aside-info {
     display: block;
   }
-
   /*    typography 900 
-  --------------------------------------------------*/
-  main aside section#aside-info {
+    --------------------------------------------------*/
+  aside section#aside-info {
     display: block;
     padding: 2rem 1rem;
     min-width: 280px;
   }
 }
-
 /*# sourceMappingURL=index.css.map */
