--- a/css/index.css
+++ b/css/index.css
@@ -107,7 +107,7 @@ main article div#sections-wrapper section h2 {
   z-index: -2;
   width: 6rem;
   height: 6rem;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: black;
 }
 
 .bg-logo::after {
@@ -132,7 +132,7 @@ main article div#sections-wrapper section h2 {
   z-index: -1;
   width: 6rem;
   height: 6rem;
-  background-color: rgba(16, 128, 251, 0.5);
+  background-color: #1080fb;
 }
 
 @-webkit-keyframes scale {
@@ -186,7 +186,8 @@ html {
   text-rendering: optimizelegibility;
 }
 
-html, body {
+html,
+body {
   min-height: 100vh;
 }
 
@@ -275,7 +276,8 @@ body .content-container {
 
 /*    Typography 
     --------------------------------------------------*/
-body > header, body main {
+body > header,
+body > div.content-container {
   margin-bottom: 1rem;
 }
 
@@ -292,24 +294,24 @@ body > header div#logo div#icon-menu {
   margin-left: 1rem;
 }
 
-body > header div#nav-wrapper > * {
+body div#nav-wrapper > * {
   -webkit-animation: scale 0.7s ease-in-out;
           animation: scale 0.7s ease-in-out;
 }
 
-body > header div#nav-wrapper nav#nav-menu ul li:last-of-type a:hover {
+body div#nav-wrapper nav#nav-menu ul li:last-of-type a:hover {
   border: none;
 }
 
-body > header div#nav-wrapper nav#nav-menu ul li {
+body div#nav-wrapper nav#nav-menu ul li {
   padding: 0 1rem;
 }
 
-body > header div#nav-wrapper form#nav-search {
+body div#nav-wrapper form#nav-search {
   padding: 1rem;
 }
 
-body > header div#nav-wrapper form#nav-search input {
+body div#nav-wrapper form#nav-search input {
   width: 100%;
   padding: 1rem;
 }
@@ -513,6 +515,10 @@ aside section {
   margin: 1rem;
 }
 
+aside section#aside-info {
+  padding: 1rem;
+}
+
 aside section#aside-info figure {
   text-align: center;
   padding: 1rem;
@@ -520,6 +526,23 @@ aside section#aside-info figure {
 
 aside section#aside-info ul {
   padding: 1rem;
+  background: rgba(0, 0, 0, 0.5);
+  color: white;
+}
+
+aside section#aside-info ul a {
+  text-decoration: none;
+  color: white;
+  -webkit-transition: all 1s;
+  transition: all 1s;
+}
+
+aside section#aside-info ul a:hover {
+  color: #1080fb;
+}
+
+aside section#aside-info ul a:active {
+  color: #1080fb;
 }
 
 @media (min-width: 31.25em) {
